
########### install files ###############

INSTALL (FILES landscape.ini description.ar.utf8 description.be.utf8 description.bg.utf8 description.nb.utf8 description.pt_BR.utf8 description.en.utf8 description.ru.utf8 garching-gl1.png  garching-gl2.png  garching-gl3.png  garching-gl4.png garching-ground3.png DESTINATION share/${PACKAGE}/landscapes/garching )
