
########### install files ###############

INSTALL(FILES landscape.ini description.ar.utf8 description.be.utf8 description.bg.utf8 description.nb.utf8 description.pt_BR.utf8 description.en.utf8 description.ru.utf8 hurricaneb.png hurricane1.png hurricane2.png hurricane3.png hurricane4.png hurricane5.png hurricane6.png hurricane7.png hurricane8.png DESTINATION share/${PACKAGE}/landscapes/hurricane)

